# myRustDemoProject

./: AGENTS.md  README.md  index.html  language-flashcards-frontend-265291cae04f611.js  language-flashcards-frontend-265291cae04f611_bg.wasm  language-flashcards-frontend-57b89291b93e413f.js  language-flashcards-frontend-57b89291b93e413f_bg.wasm  language-flashcards-frontend-ed993b35badce264.js
.github/workflows/: deploy-pages.yml
flashcards/: .gitignore  Cargo.toml  Description.md
flashcards/backend/: Cargo.toml  flashcards.csv
flashcards/backend/src/: main.rs
flashcards/frontend/: Cargo.toml  Trunk.toml  index.html  styles.css
flashcards/frontend/src/: app.rs  main.rs
flashcards/frontend/src/components/: dataset_panel.rs  help_panel.rs  mod.rs
scripts/: strip-trunk-autoreload.ps1
