[package]
name = "language-flashcards-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-file = "0.3"
csv = "1"
web-sys = { version = "0.3", features = ["FileList", "HtmlInputElement", "Blob", "Url"] }
js-sys = "0.3"
rand = { version = "0.8", features = ["std"] }
gloo-storage = "0.3.0"

